and whose bindings are unused.  This is useful to trim the list of
imports of a module.

In some cases, the compiler cannot conclude whether a module is
definitely unused---this is notably the case for modules that are only
used at macro-expansion time, such as (srfi srfi-26).  In those cases,
the compiler reports it as "possibly unused".

* Bug fixes

** (ice-9 suspendable-ports) incorrect UTF-8 decoding
   (<https://bugs.gnu.org/62290>)
** Fix invalid use of 'posix_spawn' on non-glibc systems
   (<https://bugs.gnu.org/61095>)
** Adjust 'spawn' test for GNU/Hurd
   (<https://bugs.gnu.org/62501>)
** Fix 'system*' with non-file input/output/error port
   (<https://bugs.gnu.org/63024>)
** Support signal handling child processes after 'primitive-fork'
   (<https://bugs.gnu.org/68087>)
** Fix possible deadlock in 'sigaction' (aka. 'scm_sigaction_for_thread')
   (<https://bugs.gnu.org/64666>)
** Avoid module resolution in 'call-with-new-thread', which could deadlock
   (<https://bugs.gnu.org/62691>)
** Fix deadlock in 'join-thread' when timeout is hit
   (<https://bugs.gnu.org/55356>)
** 'read-u8' in (scheme base) now defaults to (current-input-port)
   (<https://bugs.gnu.org/62690>)
** 'ftw' now correctly deals with directory permissions
   (<https://bugs.gnu.org/55344>)
** 'make-custom-port' now honors its #:conversion-strategy argument
** Hashing of UTF-8 symbols with non-ASCII characters avoids corruption
   (<https://bugs.gnu.org/56413>)

This issue could cause `scm_from_utf8_symbol' and
`scm_from_utf8_symboln` to incorrectly conclude that the symbol hadn't
already been interned, and then create a new one, which of course
wouldn't be `eq?' to the other(s).  The incorrect hash was the result of
a buffer overrun, and so might vary.  This problem affected a number of
other operations, given the internal use of those functions.



Changes in 3.0.9 (since 3.0.8)

* Notable changes

* New interfaces and functionality

** New `spawn' procedure to spawn child processes
