@@ -15,7 +15,8 @@ This manual documents Guile version @value{VERSION}.
 
 Copyright (C) 1996-1997, 2000-2005, 2009-2023 Free Software Foundation,
 Inc. @*
-Copyright (C) 2021 Maxime Devos
+Copyright (C) 2021 Maxime Devos@*
+Copyright (C) 2024 Tomas Volf@*
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
